syntax = "proto3";

option go_package = "grpc/generated";

package app;

service UserService {
	rpc GetByID (GetByIDRequest) returns (GetByIDResponse);
}

message GetByIDRequest {
	string id = 1;
}

message GetByIDResponse {
	string id = 1;
	string name = 2;
}
